# bandsearch-app

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/public/: index.html  styles.css
apps/desktop/scripts/: build.js
apps/desktop/src/: browserEntry.js  chatClient.js  chatRenderAdapter.js  chatScreen.js  chatScreenModel.js  chatViewModel.js  index.js  startDesktopBrowserApp.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/test/: browser-entry.test.js  chat-app-view.test.js  chat-client.test.js  chat-render-adapter.test.js  chat-screen-model.test.js  chat-screen.test.js  chat-view-model.test.js  desktop-react-shell.test.js  desktop-render-adapter-bootstrap.test.js  desktop-ui-bootstrap.test.js  mount-desktop-react-app.test.js  start-desktop-browser-app.test.js
docs/: ROADMAP.md
docs/design/: UI_EXAMPLES.md  UI_GUIDELINES.md
docs/superpowers/plans/: 2026-04-30-ui-redesign.md
docs/superpowers/specs/: 2026-04-30-tauri-scaffold-design.md
services/api/: package.json  tsconfig.json
services/api/migrations/: 001_create_saved_bands.sql
services/api/scripts/: migrate.js
services/api/src/: app.js  recommendations.js  server.js
services/api/test/: e2e-smoke.test.js  env-config.test.js  musicbrainz-client.test.js  preference-repository.test.js  (+7 more)
shared/schemas/: package.json
tests/e2e/: recommendation.spec.js  serve-frontend.js
(+15 files in other folders)
